Техническое задание №12 выполнено.